# nexus-os

./: .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NEXUS_OS_v3.py  NEXUS_OS_v3.py.bak2  NEXUS_OS_v3.py.testbak  NEXUS_OS_v5.py  NEXUS_OS_v6.py  README.md  apply_large_file_fix.py  codeflow_analyzer.py  daily_standup.py  nopus_magika.py  pyproject.toml  requirements.txt  setup.py  skills-lock.json  tmpci3ybcpv.py  v5_git_evolution.py  v5_persistence.py  v5_scheduler.py  v5_scheduler_daemon.py  v5_web_crawler.py
.claude/skills/: flask-api-development
